k8s-voting-app/voting-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: voting-app
  template:
    metadata:
      labels:
        app: voting-app
    spec:
      containers:
      - name: voting-app
        image: public.ecr.aws/n5k7g9w8/voting-app:v1
        ports:
        - containerPort: 3000
