k8s-voting-app/voting-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-svc
spec:
  selector:
    app: voting-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
