k8s-voting-app/app-to-db-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-to-db-policy
spec:
  podSelector:
    matchLabels:
      app: postgres-db

  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: voting-app
      ports:
        - protocol: TCP
          port: 5432
