k8s-voting-app/deny-all-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: voting-app-network-policy
spec:
  podSelector: {}
  policyTypes:
  - Ingress
