k8s-voting-app/to-app-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: to-app-policy
spec:
  podSelector:
    matchLabels:
      app: voting-app

  policyTypes:
    - Ingress

  ingress:
    - ports:
        - protocol: TCP
          port: 3000
